--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:exported="false"
             android:theme="@style/Theme.Project2" />
         <activity
+            android:name=".forgotpassword"
+            android:exported="false"
+            android:theme="@style/Theme.Project2" />
+        <activity
             android:name=".register"
             android:exported="false"
             android:theme="@style/Theme.Project2" />
